hphp/test/zend/good/Zend/tests/exception_handler_003.php.expectf
Fatal error: Uncaught exception 'Exception' with message '' in %s/exception_handler_003.php:16
Stack trace:
#0 (): main()
#1 {main}
string(17) "Exception thrown!"
